# lcgcmake

./: CMakeLists.txt  reference.py  toolchain.cmake
cdash/: AFS.py  Tools.py  clean_AFS.py  clean_disk.py  cleanbuildmachines.py  common.cmake  copyRPMS.py  copy_to_afs.py  copy_to_afs_rootext.py  createLCGCMTtarfiles  ec-mac108-clang42  ec-mac108-gcc42  ec-mac109-clang50  ec-slc5-gcc43  ec-slc5-gcc46  ec-slc5-gcc47  ec-slc6-clang34  ec-slc6-gcc46  ec-slc6-gcc47  ec-slc6-gcc48  ec-slc6-gcc49  ec-slc6-icc13  extract_LCG_summary.py  getNewRPMrevision.py  getPlatform.py  get_platform.cmake  isDone.sh  jk-runbuild.sh  jk-setup-test.sh  jk-setup.sh  jk-setuptest.sh  lcg-setup  lcgcmake-build.cmake  links.sh  macros.cmake  post-installation.sh  prepareAFSReleaseArea.py  prepare_RPMS.sh  projectareamanager.py  runbuild.sh  (+3 more)
cdash/createAFSvolumeScripts/: AFS.py  finalizeAFSReleaseArea.py  prepareAFSReleaseArea.py  projectareamanager.py
cmake/modules/: ExternalProject.cmake  FindBlackhat.cmake  FindBoost.cmake  FindEvtgen.cmake  FindHerwigpp.cmake  FindHijing.cmake  FindLhapdf6.cmake  FindPhotospp.cmake  FindPyquen.cmake  FindPythia6.cmake  FindPythia8.cmake  FindTauola.cmake  FindTauolapp.cmake  FindThepeg.cmake  FindYamlcpp.cmake  Findhepmc3.cmake  GNUMakeTestfile.cmake  lcgsoft-macros.cmake
cmake/scripts/: DownloadURL.cmake  InstallBuildinfoFile.cmake  InstallLogFiles.cmake  InstallVersionFile.cmake  RemoveRPath.cmake  StripLib.cmake  TestDriver.cmake  checkLCGrelease.py  check_debug_symbols.sh  check_env_scripts.sh  check_permissions.sh  check_relative_rpath.sh  check_toolchains.sh  copy.cmake  create_LCGCMT.py  exec-cmt-with-env  exec-with-env  findpython.sh  findrivet.sh  lcg_install.cmake  make_verbose  post-install.sh  provide-environment.cmake  report_build_time.sh  runmkhtml.sh  testtoolchain.py  yoda2root.cmake
cmake/toolchain/: heptools-61c.cmake  heptools-61f.cmake  heptools-61g.cmake  heptools-64.cmake  heptools-64b.cmake  heptools-64d.cmake  heptools-65.cmake  heptools-65a.cmake  heptools-65rc1.cmake  heptools-66.cmake  heptools-67.cmake  heptools-67a.cmake  heptools-67b.cmake  heptools-67c.cmake  heptools-68.cmake  heptools-68root6.cmake  heptools-69.cmake  heptools-69root6.cmake  heptools-70.cmake  heptools-70root6.cmake  heptools-71.cmake  heptools-71root6.cmake  heptools-72a.cmake  heptools-72root6.cmake  heptools-73.cmake  heptools-73root6.cmake  heptools-74root6.cmake  heptools-75root6.cmake  heptools-75root6a.cmake  (+17 more)
documentation/: LHC_gencontacts.txt  afs_management.txt  ctests.txt  genser_short_user_instructions.txt  genser_user_instructions.txt  installation.txt  native_build.txt  packageinfo.txt  toolchain_checker_instructions.txt
generators/: CMakeLists.txt  herwig++-2.6.3.patch  photos-215.4.patch  rivet-1.8.2.patch  splitter.pl
generators/alpgen/files/: CMakeLists.txt  README  configure
generators/alpgen/files/examples/: Makefile_simple  README  alpgen.mk  configure_simple  fragmPythia  gen.mk  hwfragm.mk  hwuser.f  pyfragm.mk  pyuser.cc  pyuser.f  pyuser_pt_W.cc  validate
generators/blackhat/tests/: CMakeLists.txt
generators/evtgen/tests/: CMakeLists.txt  Makefile.evtgen  evtgen_test1.cc
generators/hepmc3/tests/: CMakeLists.txt
generators/hepmcanalysis/tests/: CMakeLists.txt
generators/herwig++/tests/: CMakeLists.txt  LHC-DY.in  LHC-W.in  LHC-diffractive.in  LHC-ttbar.in  LHC-zjets.in  herwigpp_test1.cc  herwigpp_test1.h  herwigpp_test1.in
generators/herwig/tests/: CMakeLists.txt  herwig_genser_outhepmc.cc  herwig_hepmc.cc
generators/hijing/tests/: CMakeLists.txt  Makefile.hijing  hijing_test1.F
generators/hydjet/files/: CMakeLists.txt  prepareHydjet.cmake
generators/hydjet/tests/: CMakeLists.txt  Makefile.hydjet  hydjet_test1.f  hydjet_test3.f
generators/lhapdf/tests/: CMakeLists.txt  lhapdf_test1.f  lhapdf_test2.f
generators/lhapdf6/tests/: CMakeLists.txt
generators/lhapdf6/tests/pyt8/: CMakeLists.txt  lhapdf6_pyt8.cc
generators/mctester/tests/: CMakeLists.txt  Makefile
generators/photos/tests/: CMakeLists.txt  Makefile.photos  libtests.mk  photos_test1.F
generators/photospp/tests/: CMakeLists.txt  Makefile.photospp  mergetest  photos_hepevt_example.cxx  photospp_test1.cc  photospp_test2.cc  photospp_test3.cc
generators/pyquen/files/: CMakeLists.txt  preparePyquen.cmake
generators/pyquen/tests/: CMakeLists.txt  pyquen_test1.f
generators/pythia6/files/: CMakeLists.txt  configure  configure.ac  preparePythia6.cmake  pystrf.f
generators/pythia6/files/examples/: CMakeLists.txt  README  configure
generators/pythia6/files/include/: hepevt.inc.in
generators/pythia6/tests/: CMakeLists.txt  pythia6_genser_outhepmc.cc  pythia6_genser_test1.cc  pythia6_hepmc.cc  pythia6_test3.F
generators/pythia8/tests/: CMakeLists.txt  Makefile.pythia8  main14_genser.cc  mergetest  pythia8-zjets-rivet.params  pythia8.cc  pythia8_outhepmc.cc  pythia8_test1.cc  pythia8_test1_lhapdf.cc  pythia8_test2.cc  pythia8_test2.cmnd  pythia8_test3.cc  pythia8_test4.cc  riv2html.sh  riv2test.sh
generators/pythia8/tests/analyserhepmc/: AnalyserHepMC.cc  AnalyserHepMC.h  JetInputHepMC.cc  LeptonAnalyserHepMC.cc
generators/pythia8/tests/compare/: cmpr.sh
generators/sherpa/tests/: CMakeLists.txt  riv2test.sh  runtest  sherpa_readtest1.cc  sherpa_test1.comment
generators/starlight/tests/: CMakeLists.txt  starlight_test0.F
generators/tauola/tests/: CMakeLists.txt  Makefile.tauola  tauola_test1.F
generators/tauolapp/tests/: CMakeLists.txt  Makefile.tauolapp  tauolapp_test1.cc
generators/vincia/files/: CMakeLists.txt  configure  script.sh.in  vinciaenv.csh.in
generators/vincia/files/cmake/modules/: FindPythia8.cmake  TargetDistclean.cmake
generators/vincia/files/modules/: FindPythia8.cmake
generators/yamlcpp/tests/: CMakeLists.txt  produce-yaml.cpp
gridexternals/: CMakeLists.txt
projects/: CMakeLists.txt  RELAX_1_3_0i.patch  RELAX_1_3_0k.patch  ROOT-5.34.05.patch  ROOT-5.34.07.patch  cmaketools.patch
pyexternals/: CMakeLists.txt  CreateLockFile  DeleteLockFile  Python_postinstall.sh  cx_oracle-5.1.1.patch  pyminuit-0.0.1.patch
(+288 files in other folders)
